removed apiclient dependency and implemented requests

--- a/templates.yaml
+++ b/templates.yaml
@@ -1,4 +1,4 @@
-welcome: Welcome to trending news
+welcome: Welcome to trending news, You can ask for any trending news any country
 cancel: Good bye!
 news: Here is the news from {{ source }}. {{ news }}
 detail_news_error: You haven't searched for any news. You need to search for a news and read more about it
@@ -6,3 +6,4 @@ next_news_error: You haven't searched for any news. You need to search for some 
 previous_news_error: You haven't searched for any news. You need to search for some news to read previous
 not_having_further_news: You don't further news in this category. Refine your search for more results
 not_having_previous_news: You don't have previous news.
+categories_list: The available categories are {{ categories }}
