--- a/templates.yaml
+++ b/templates.yaml
@@ -8,3 +8,4 @@ not_having_further_news: You don't further news in this category. Refine your se
 not_having_previous_news: You don't have previous news.
 categories_list: The available categories are {{ categories }}
 no_results: We don't find any results for your search, could you refine your search
+help: You can ask for trending news in any country
